build in workspace root

--- a/CMakeSettings.json
+++ b/CMakeSettings.json
@@ -7,8 +7,8 @@
       "inheritEnvironments": [
         "msvc_x64_x64"
       ],
-      "buildRoot": "C:\\.build\\NvPipe\\${name}",
-      "installRoot": "C:\\.install\\NvPipe\\${name}",
+      "buildRoot": "${workspaceRoot}\\build\\NvPipe\\${name}",
+      "installRoot": "${workspaceRoot}\\install\\NvPipe\\${name}",
       "cmakeCommandArgs": "",
       "buildCommandArgs": "-v",
       "ctestCommandArgs": "",
